Thu May 31 11:23:05 GMT 2012  Olly Betts <olly@survex.com>

	* weight/bm25weight.cc: Avoid use of undefined values when k1 or b are
	  zero.

Wed May 30 21:50:54 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_matchspy.cc: Use a cached generated database for matchspy2
	  and matchspy4.

Wed May 30 13:22:54 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/weight.h,weight/weight.cc: We were failing to call
	  init() for Weight objects providing the term-independent weight.
	  These now get called with init(0.0).

Wed May 30 13:13:03 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/weight.h: Remove duplicate "need_stat(WDF);" calls,
	  accidentally added by merge of opsynonym branch in r12609.

Wed May 30 07:44:23 GMT 2012  Olly Betts <olly@survex.com>

	* weight/bm25weight.cc: Fix use of uninitialised value found by new
	  bm25weight4 testcase.

Wed May 30 05:38:58 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_weight.cc: Add tests for BM25 parameter combinations where
	  doclen shouldn't affect the weights.

Wed May 30 05:11:34 GMT 2012  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Move api_geospatial.cc into alphabetical order.

Wed May 30 05:07:51 GMT 2012  Olly Betts <olly@survex.com>

	* weight/bm25weight.cc,weight/tradweight.cc: Throw SerialisationError
	  not NetworkError if unserialise() fails.
	* tests/.gitignore,tests/Makefile.am,tests/api_weight.cc: Add test
	  coverage for this.

Wed May 30 05:01:33 GMT 2012  Olly Betts <olly@survex.com>

	* weight/tradweight.cc: BM25Weight -> TradWeight in exception message.

Wed May 30 04:28:43 GMT 2012  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Fix feature test added for STEM_ALL_Z.

Tue May 29 07:29:01 GMT 2012  Olly Betts <olly@survex.com>

	* tests/harness/testutils.cc,tests/harness/testutils.h: Remove unused
	  test helper mset_range_is_same_percents() (thanks, lcov!)

Tue May 29 04:10:07 GMT 2012  Olly Betts <olly@survex.com>
